added labels in contacts div

--- a/form-1/index.html
+++ b/form-1/index.html
@@ -36,19 +36,19 @@
         <div id="contacts">
             <h2>Reach Us</h2>
             <div class="contact">
-                <div>Icon</div>
+                <label>Email</label>
                 <div>email@email.com</div>
             </div>
             <div class="contact">
-                <div>Icon</div>
+                <label>Telephone</label>
                 <div>+255 876 765 567</div>
             </div>
             <div class="contact">
-                <div>Icon</div>
+                <label>Location</label>
                 <div>Location, At Location</div>
             </div>
             <div class="contact">
-                <div>Icon</div>
+                <label>Duration</label>
                 <div>0900 - 1600</div>
             </div>
         </div>
